--- a/kafka/server-2.properties
+++ b/kafka/server-2.properties
@@ -1,12 +1,13 @@
 # Enable KRaft mode
 process.roles=controller,broker
 node.id=2
-controller.quorum.voters=1@kafka-1:9093,2@kafka-2:9093
+controller.quorum.voters=1@kafka-1:9093,2@kafka-2:9093,3@kafka-3:9093
 
 # Listeners for communication
-listeners=PLAINTEXT://kafka-2:9092,CONTROLLER://kafka-2:9093
+listeners=PLAINTEXT://kafka-2:9094,CONTROLLER://kafka-2:9093
+advertised.listeners=PLAINTEXT://192.168.1.203:9094
 inter.broker.listener.name=PLAINTEXT
 controller.listener.names=CONTROLLER
 
 # Unique log directory for this broker
-log.dirs=/var/lib/kafka-2/data
+log.dirs=/var/lib/kafka/data-2
