--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -48,6 +48,8 @@ services:
     volumes:
       - kafka2_data:/var/lib/kafka/data
       - ./server-2.properties:/etc/kafka/server.properties
+    depends_on:
+      - kafka-1
 
   kafka-3:
     image: confluentinc/cp-kafka:latest
@@ -73,6 +75,8 @@ services:
     volumes:
       - kafka3_data:/var/lib/kafka/data
       - ./server-3.properties:/etc/kafka/server.properties
+    depends_on:
+      - kafka-2
 
   # Flink JobManager
   flink-jobmanager:
@@ -100,10 +104,14 @@ services:
 
   # ChromaDB for storing vector embeddings
   chromadb:
-    image: chromadb/chroma:latest
+    image: ghcr.io/chroma-core/chroma:latest
     container_name: chromadb-rag
     ports:
-      - "8888:8000"
+      - "8000:8000"
+    environment:
+      - CHROMA_SERVER_HOST=0.0.0.0
+      - CHROMA_SERVER_PORT=8000
+      - CHROMA_DEBUG=true
     volumes:
       - ./chromadb-data:/chroma/db
     networks:
